--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -10,6 +10,7 @@ body{
     overflow-x: hidden;
     -webkit-font-smoothing: antialiased;
     -webkit-text-size-adjust: 100%;
+    background-color:#0C1114
 }
 
 .wrapper span{
