--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3460,7 +3460,7 @@ li.menu-item-has-children.active {
     justify-content: center;
     height: 100%;
     position: fixed;
-    background-color:black !important;
+    background-color:#061d12 !important;
 }
 
 .works-section{
